[gd_scene load_steps=7 format=3 uid="uid://factory_jam_scene"]

[ext_resource type="Script" path="res://Factory/FactoryJamScene.gd" id="1"]
[ext_resource type="Script" path="res://Factory/FactoryJamGame.gd" id="2"]
[ext_resource type="Texture2D" path="res://Factory/Assets/factory_bg.png" id="3"]
[ext_resource type="Texture2D" path="res://Factory/Assets/conveyor_belt.png" id="4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_info"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.5, 0.2, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="FactoryJamScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3")
expand_mode = 2
stretch_mode = 6

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Container"]
layout_mode = 2
text = "üè≠ –†–ê–°–§–ê–°–û–í–ö–ê –ü–û–í–ò–î–õ–ê"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanelContainer" type="PanelContainer" parent="Container"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_info")

[node name="InfoPanel" type="VBoxContainer" parent="Container/InfoPanelContainer"]
layout_mode = 2
alignment = 1

[node name="TimerLabel" type="Label" parent="Container/InfoPanelContainer/InfoPanel"]
layout_mode = 2
text = "‚è± –í—Ä–µ–º—è: 30.0 —Å–µ–∫"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Container/InfoPanelContainer/InfoPanel"]
layout_mode = 2
text = "üìä –û—á–∫–∏: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="Container/InfoPanelContainer/InfoPanel"]
layout_mode = 2
text = "‚úÖ –ü–æ–º–µ—á–µ–Ω–æ: 0/15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Conveyor" type="Control" parent="Container"]
layout_mode = 2
custom_minimum_size = Vector2(0, 400)
mouse_filter = 2

[node name="Background" type="TextureRect" parent="Container/Conveyor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4")
stretch_mode = 1

[node name="InstructionsLabel" type="Label" parent="Container"]
layout_mode = 2
text = "üëÜ –ö–ª–∏–∫–∞–π—Ç–µ –Ω–∞ –±–∞–Ω–∫–∏, —á—Ç–æ–±—ã –Ω–∞–∫–ª–µ–∏—Ç—å –Ω–∞–∫–ª–µ–π–∫–∏!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkipButton" type="Button" parent="Container"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "–ü–†–û–ü–£–°–¢–ò–¢–¨"

[node name="FactoryJamGame" type="Node" parent="."]
script = ExtResource("2")
