extends Control
## –°—Ü–µ–Ω–∞ –º–∏–Ω–∏-–∏–≥—Ä—ã: –†–∞—Å—Ñ–∞—Å–æ–≤–∫–∞ –ø–æ–≤–∏–¥–ª–∞

@onready var timer_label: Label = $Container/InfoPanelContainer/InfoPanel/TimerLabel
@onready var score_label: Label = $Container/InfoPanelContainer/InfoPanel/ScoreLabel
@onready var progress_label: Label = $Container/InfoPanelContainer/InfoPanel/ProgressLabel
@onready var conveyor: Control = $Container/Conveyor
@onready var skip_button: Button = $Container/SkipButton
@onready var game_logic: FactoryJamGame = $FactoryJamGame
@onready var conveyor_background: TextureRect = $Container/Conveyor/Background

var jar_scene: PackedScene
var jars: Array[Control] = []
var jar_speed: float = 200.0

# –ó–≤—É–∫–∏
var sticker_sound: AudioStreamPlayer
var conveyor_sound: AudioStreamPlayer

# –ö–æ–Ω–≤–µ–π–µ—Ä
var conveyor_texture: TextureRect
var conveyor_offset: float = 0.0
var conveyor_speed: float = 100.0

signal factory_game_finished(score: int, jars_labeled: int, jars_missed: int)

func _ready():
	# –ó–∞–≥—Ä—É–∑–∏—Ç—å —Å—Ü–µ–Ω—É –±–∞–Ω–∫–∏
	jar_scene = load("res://Factory/Jar.tscn") as PackedScene
	
	# –°–æ–∑–¥–∞—Ç—å –∑–≤—É–∫–∏
	_create_audio_players()
	
	# –ù–∞—Å—Ç—Ä–æ–∏—Ç—å –∫–æ–Ω–≤–µ–π–µ—Ä
	_create_conveyor()
	
	# –ü–æ–¥–∫–ª—é—á–∏—Ç—å —Å–∏–≥–Ω–∞–ª—ã
	if game_logic:
		game_logic.game_finished.connect(_on_game_finished)
		game_logic.spawn_jar_requested.connect(_on_spawn_jar)
		game_logic.jar_labeled.connect(_on_jar_labeled)
		game_logic.jar_missed.connect(_on_jar_missed)
	
	# –ü–æ–¥–∫–ª—é—á–∏—Ç—å –∫–Ω–æ–ø–∫—É –ø—Ä–æ–ø—É—Å–∫–∞
	if skip_button:
		skip_button.pressed.connect(_on_skip_button_pressed)
	
	# –°–∫—Ä—ã—Ç—å –∫–Ω–æ–ø–∫—É –ø—Ä–æ–ø—É—Å–∫–∞ –≤ –Ω–∞—á–∞–ª–µ
	if skip_button:
		skip_button.hide()
	
	# –ù–∞—Å—Ç—Ä–æ–∏—Ç—å –∫–æ–Ω–≤–µ–π–µ—Ä
	if conveyor_background:
		conveyor_background.modulate = Color(1, 1, 1)
	
	# –ù–ï –∑–∞–ø—É—Å–∫–∞–µ–º –∏–≥—Ä—É –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ - –∂–¥—ë–º —Å–∏–≥–Ω–∞–ª–∞ –æ—Ç ScenePlayer
	# call_deferred("start_game_auto")
	
	update_ui()

func _create_audio_players():
	"""–°–æ–∑–¥–∞—Ç—å –∞—É–¥–∏–æ-–ø–ª–µ–µ—Ä—ã –¥–ª—è –∑–≤—É–∫–æ–≤"""
	# –ó–≤—É–∫ –Ω–∞–∫–ª–µ–∏–≤–∞–Ω–∏—è –Ω–∞–∫–ª–µ–π–∫–∏
	sticker_sound = AudioStreamPlayer.new()
	sticker_sound.name = "StickerSound"
	add_child(sticker_sound)
	
	# –ó–≤—É–∫ –∫–æ–Ω–≤–µ–π–µ—Ä–∞ (–∑–∞—Ü–∏–∫–ª–µ–Ω–Ω—ã–π)
	conveyor_sound = AudioStreamPlayer.new()
	conveyor_sound.name = "ConveyorSound"
	conveyor_sound.autoplay = false
	add_child(conveyor_sound)

func _create_conveyor():
	"""–ù–∞—Å—Ç—Ä–æ–∏—Ç—å –≤–∏–∑—É–∞–ª—å–Ω—ã–π –∫–æ–Ω–≤–µ–π–µ—Ä"""
	if not conveyor_background:
		return
	
	# –ò—Å–ø–æ–ª—å–∑—É–µ–º —É–∂–µ —Å—É—â–µ—Å—Ç–≤—É—é—â–∏–π TextureRect –∏–∑ —Å—Ü–µ–Ω—ã
	conveyor_texture = conveyor_background
	
	# –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –ø–∞—Ä–∞–º–µ—Ç—Ä–æ–≤ —Ç–µ–∫—Å—Ç—É—Ä—ã
	conveyor_texture.expand_mode = TextureRect.EXPAND_IGNORE_SIZE
	conveyor_texture.stretch_mode = TextureRect.STRETCH_TILE
	
	print("‚úÖ Conveyor belt initialized.")

func _input(event: InputEvent):
	"""–û–±—Ä–∞–±–æ—Ç–∫–∞ –∫–ª–∏–∫–æ–≤ –ø–æ –±–∞–Ω–∫–∞–º —á–µ—Ä–µ–∑ –≥–ª–æ–±–∞–ª—å–Ω—ã–π input"""
	if not game_logic or game_logic.current_state != FactoryJamGame.GameState.PLAYING:
		return
	
	if event is InputEventMouseButton:
		if event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
			# –ù–∞–π—Ç–∏ –±–∞–Ω–∫—É –ø–æ–¥ –∫—É—Ä—Å–æ—Ä–æ–º
			var mouse_pos = get_global_mouse_position()
			for jar in jars:
				if jar and is_instance_valid(jar):
					var jar_global_pos = jar.get_global_position()
					# –£—á–∏—Ç—ã–≤–∞–µ–º, —á—Ç–æ jar –º–æ–∂–µ—Ç –±—ã—Ç—å –¥–æ—á–µ—Ä–Ω–∏–º —ç–ª–µ–º–µ–Ω—Ç–æ–º conveyor
					if conveyor:
						jar_global_pos = conveyor.get_global_position() + jar.position
					var jar_rect = Rect2(jar_global_pos, jar.size)
					if jar_rect.has_point(mouse_pos):
						_on_jar_clicked(jar)
						break

func _process(delta: float):
	"""–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –∏–≥—Ä—ã"""
	if not game_logic:
		return
		
	if game_logic.current_state == FactoryJamGame.GameState.PLAYING:
		# –û–±–Ω–æ–≤–∏—Ç—å —Ç–∞–π–º–µ—Ä —Å —Ü–≤–µ—Ç–æ–≤–æ–π –∏–Ω–¥–∏–∫–∞—Ü–∏–µ–π
		var time = game_logic.get_time_remaining()
		if timer_label:
			timer_label.text = "‚è± –í—Ä–µ–º—è: %.1f —Å–µ–∫" % time
			# –ö—Ä–∞—Å–Ω—ã–π —Ü–≤–µ—Ç –ø—Ä–∏ –º–∞–ª–æ–º –≤—Ä–µ–º–µ–Ω–∏
			if time < 5.0:
				timer_label.modulate = Color(1, 0.3, 0.3)  # –ö—Ä–∞—Å–Ω—ã–π
			elif time < 10.0:
				timer_label.modulate = Color(1, 0.7, 0.3)  # –û—Ä–∞–Ω–∂–µ–≤—ã–π
			else:
				timer_label.modulate = Color(1, 1, 1)  # –ë–µ–ª—ã–π
		
		# –î–≤–∏–≥–∞—Ç—å –±–∞–Ω–∫–∏
		var jars_to_remove = []
		for jar in jars:
			if jar and is_instance_valid(jar):
				jar.position.x += jar_speed * delta
				
				# Wobble effect (–ø–æ–∫–∞—á–∏–≤–∞–Ω–∏–µ –ø—Ä–∏ –¥–≤–∏–∂–µ–Ω–∏–∏)
				var wobble_freq = 0.05
				var wobble_amp = 3.0
				# –ò—Å–ø–æ–ª—å–∑—É–µ–º position.x –¥–ª—è —Å–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∞—Ü–∏–∏ —Å –¥–≤–∏–∂–µ–Ω–∏–µ–º
				jar.rotation_degrees = sin(jar.position.x * wobble_freq) * wobble_amp
				
				# –£–¥–∞–ª–∏—Ç—å –±–∞–Ω–∫–∏, –∫–æ—Ç–æ—Ä—ã–µ —É—à–ª–∏ –∑–∞ —ç–∫—Ä–∞–Ω
				if jar.position.x > get_viewport_rect().size.x + 100:
					jars_to_remove.append(jar)
		
		# –£–¥–∞–ª–∏—Ç—å –ø—Ä–æ–ø—É—â–µ–Ω–Ω—ã–µ –±–∞–Ω–∫–∏
		for jar in jars_to_remove:
			# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –±—ã–ª–∞ –ª–∏ –±–∞–Ω–∫–∞ –ø–æ–º–µ—á–µ–Ω–∞
			var is_labeled = false
			if jar.has_node("Sticker"):
				if jar.get_node("Sticker").visible:
					is_labeled = true
			
			remove_jar(jar)
			
			if not is_labeled and game_logic:
				game_logic.miss_jar()
		
		# –î–≤–∏–≥–∞—Ç—å –∫–æ–Ω–≤–µ–π–µ—Ä –ø–æ—Å—Ç–æ—è–Ω–Ω–æ (–Ω–µ–∑–∞–≤–∏—Å–∏–º–æ –æ—Ç —Å–æ—Å—Ç–æ—è–Ω–∏—è –∏–≥—Ä—ã)
		if conveyor_texture:
			conveyor_offset += conveyor_speed * delta
			# –ó–∞—Ü–∏–∫–ª–∏—Ç—å —Å–º–µ—â–µ–Ω–∏–µ –¥–ª—è –±–µ—Å—à–æ–≤–Ω–æ–≥–æ –¥–≤–∏–∂–µ–Ω–∏—è
			if conveyor_texture.texture:
				var texture_width = conveyor_texture.texture.get_width()
				if texture_width > 0:
					conveyor_offset = fmod(conveyor_offset, texture_width)
					conveyor_texture.offset_left = -conveyor_offset
					conveyor_texture.offset_right = conveyor_offset
			else:
				# –ï—Å–ª–∏ –Ω–µ—Ç —Ç–µ–∫—Å—Ç—É—Ä—ã, –∏—Å–ø–æ–ª—å–∑—É–µ–º modulate –¥–ª—è —ç—Ñ—Ñ–µ–∫—Ç–∞
				conveyor_offset = fmod(conveyor_offset, 100.0)
		
		update_ui()

func start_game_auto():
	"""–ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –Ω–∞—á–∞—Ç—å –∏–≥—Ä—É"""
	if game_logic:
		game_logic.start_game()
	if skip_button:
		skip_button.show()
	
	# –ó–∞–ø—É—Å—Ç–∏—Ç—å –∑–≤—É–∫ –∫–æ–Ω–≤–µ–π–µ—Ä–∞
	if conveyor_sound and conveyor_sound.stream:
		conveyor_sound.play()

func start_game_manual():
	"""–ù–∞—á–∞—Ç—å –∏–≥—Ä—É –≤—Ä—É—á–Ω—É—é (–≤—ã–∑—ã–≤–∞–µ—Ç—Å—è –∏–∑ ScenePlayer –ø–æ—Å–ª–µ –¥–∏–∞–ª–æ–≥–∞)"""
	start_game_auto()

func _on_skip_button_pressed():
	"""–ü—Ä–æ–ø—É—Å—Ç–∏—Ç—å –º–∏–Ω–∏-–∏–≥—Ä—É"""
	# –ó–∞–≤–µ—Ä—à–∏—Ç—å —Å –º–∏–Ω–∏–º–∞–ª—å–Ω—ã–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–º
	if game_logic:
		game_logic.finish_game()

func _on_spawn_jar():
	"""–°–æ–∑–¥–∞—Ç—å –Ω–æ–≤—É—é –±–∞–Ω–∫—É"""
	var jar: Control = null
	
	if jar_scene and jar_scene.can_instantiate():
		jar = jar_scene.instantiate()
	
	if not jar:
		# –ï—Å–ª–∏ —Å—Ü–µ–Ω–∞ –Ω–µ –∑–∞–≥—Ä—É–∂–µ–Ω–∞, —Å–æ–∑–¥–∞—ë–º –ø—Ä–æ—Å—Ç—É—é –±–∞–Ω–∫—É
		jar = create_simple_jar()
	
	if not jar:
		return
	
	# –°–ª—É—á–∞–π–Ω–∞—è –ø–æ–∑–∏—Ü–∏—è –ø–æ Y –¥–ª—è —Ä–∞–∑–Ω–æ–æ–±—Ä–∞–∑–∏—è
	var y_offset = randf_range(-50, 50)
	jar.position = Vector2(-100, conveyor.size.y / 2 - 25 + y_offset)
	
	# –î–æ–±–∞–≤–∏—Ç—å –Ω–µ–±–æ–ª—å—à—É—é —Å–ª—É—á–∞–π–Ω—É—é –∑–∞–¥–µ—Ä–∂–∫—É –¥–ª—è —Ä–∞–∑–Ω–æ–æ–±—Ä–∞–∑–∏—è
	var spawn_delay = randf_range(0.0, 0.3)
	if spawn_delay > 0:
		await get_tree().create_timer(spawn_delay).timeout
	
	# –£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å z_index –¥–ª—è –±–∞–Ω–∫–∏, —á—Ç–æ–±—ã –æ–Ω–∞ –±—ã–ª–∞ –ø–æ–≤–µ—Ä—Ö –ª–µ–Ω—Ç—ã –∫–æ–Ω–≤–µ–π–µ—Ä–∞
	jar.z_index = 2  # –í—ã—à–µ –ª–µ–Ω—Ç—ã (z_index = 1) –∏ Background (z_index = 0)
	
	conveyor.add_child(jar)
	jars.append(jar)
	
	# –ê–Ω–∏–º–∞—Ü–∏—è –ø–æ—è–≤–ª–µ–Ω–∏—è
	var tween = create_tween()
	jar.modulate = Color(1, 1, 1, 0)
	tween.tween_property(jar, "modulate", Color(1, 1, 1, 1), 0.2)
	
	# –ü–æ–¥–∫–ª—é—á–∏—Ç—å –∫–ª–∏–∫ - –∏—Å–ø–æ–ª—å–∑—É–µ–º —É–Ω–∏–≤–µ—Ä—Å–∞–ª—å–Ω—ã–π –º–µ—Ç–æ–¥
	if jar.has_signal("jar_clicked"):
		jar.jar_clicked.connect(_on_jar_clicked.bind(jar))
	
	# –í—Å–µ–≥–¥–∞ –¥–æ–±–∞–≤–ª—è–µ–º –æ–±—Ä–∞–±–æ—Ç—á–∏–∫ gui_input –¥–ª—è –Ω–∞–¥—ë–∂–Ω–æ—Å—Ç–∏
	jar.gui_input.connect(_on_jar_gui_input.bind(jar))

func _add_sticker_to_jar(jar: Control):
	"""–î–æ–±–∞–≤–∏—Ç—å –≤–∏–∑—É–∞–ª—å–Ω—É—é –Ω–∞–∫–ª–µ–π–∫—É –Ω–∞ –±–∞–Ω–∫—É"""
	if not jar or not is_instance_valid(jar):
		return
	
	# –ü—Ä–æ–≤–µ—Ä–∏—Ç—å, –Ω–µ—Ç –ª–∏ —É–∂–µ –Ω–∞–∫–ª–µ–π–∫–∏
	for child in jar.get_children():
		if child.name == "Sticker":
			child.visible = true
			child.modulate = Color(1, 1, 1, 1)
			return
	
	# –°–æ–∑–¥–∞—Ç—å –Ω–∞–∫–ª–µ–π–∫—É
	var sticker = ColorRect.new()
	sticker.name = "Sticker"
	sticker.color = Color(1, 0.2, 0.2, 0.8)  # –ö—Ä–∞—Å–Ω–∞—è –Ω–∞–∫–ª–µ–π–∫–∞
	sticker.size = Vector2(jar.size.x * 0.8, jar.size.y * 0.25)
	sticker.position = Vector2(jar.size.x * 0.1, jar.size.y * 0.05)
	sticker.mouse_filter = Control.MOUSE_FILTER_IGNORE
	jar.add_child(sticker)
	
	# –ê–Ω–∏–º–∞—Ü–∏—è –ø–æ—è–≤–ª–µ–Ω–∏—è
	var tween = create_tween()
	sticker.modulate = Color(1, 1, 1, 0)
	tween.tween_property(sticker, "modulate", Color(1, 1, 1, 1), 0.2)

func _create_click_effect(jar: Control):
	"""–°–æ–∑–¥–∞—Ç—å –≤–∏–∑—É–∞–ª—å–Ω—ã–π —ç—Ñ—Ñ–µ–∫—Ç –ø—Ä–∏ –∫–ª–∏–∫–µ"""
	if not jar or not is_instance_valid(jar):
		return
	
	# –ü—Ä–æ—Å—Ç–æ–π —ç—Ñ—Ñ–µ–∫—Ç - –≤—Å–ø—ã—à–∫–∞
	var flash = ColorRect.new()
	flash.color = Color(1, 1, 0.3, 0.5)  # –ñ—ë–ª—Ç–∞—è –≤—Å–ø—ã—à–∫–∞
	flash.size = jar.size
	flash.position = Vector2.ZERO
	flash.mouse_filter = Control.MOUSE_FILTER_IGNORE
	jar.add_child(flash)
	
	# –ê–Ω–∏–º–∞—Ü–∏—è –∏—Å—á–µ–∑–Ω–æ–≤–µ–Ω–∏—è
	var tween = create_tween()
	tween.tween_property(flash, "modulate:a", 0.0, 0.3)
	tween.tween_callback(flash.queue_free)

func create_simple_jar() -> Control:
	"""–°–æ–∑–¥–∞—Ç—å –ø—Ä–æ—Å—Ç—É—é –±–∞–Ω–∫—É –µ—Å–ª–∏ —Å—Ü–µ–Ω–∞ –Ω–µ –∑–∞–≥—Ä—É–∂–µ–Ω–∞"""
	var jar = Control.new()
	jar.custom_minimum_size = Vector2(80, 120)
	jar.mouse_filter = Control.MOUSE_FILTER_STOP
	jar.name = "SimpleJar"
	jar.z_index = 2  # –í—ã—à–µ –ª–µ–Ω—Ç—ã –∫–æ–Ω–≤–µ–π–µ—Ä–∞ (z_index = 1)
	
	# –¢–µ–ª–æ –±–∞–Ω–∫–∏ (—Ü–∏–ª–∏–Ω–¥—Ä)
	var body = ColorRect.new()
	body.color = Color(0.9, 0.85, 0.75)  # –°–≤–µ—Ç–ª–æ-–±–µ–∂–µ–≤—ã–π
	body.size = Vector2(60, 100)
	body.position = Vector2(10, 10)
	jar.add_child(body)
	
	# –ö—Ä—ã—à–∫–∞
	var lid = ColorRect.new()
	lid.color = Color(0.7, 0.5, 0.3)  # –ö–æ—Ä–∏—á–Ω–µ–≤–∞—è –∫—Ä—ã—à–∫–∞
	lid.size = Vector2(60, 15)
	lid.position = Vector2(10, 5)
	jar.add_child(lid)
	
	# –ü–æ–≤–∏–¥–ª–æ –≤–Ω—É—Ç—Ä–∏
	var jam = ColorRect.new()
	jam.color = Color(0.8, 0.4, 0.1)  # –û—Ä–∞–Ω–∂–µ–≤–æ–µ –ø–æ–≤–∏–¥–ª–æ
	jam.size = Vector2(50, 60)
	jam.position = Vector2(15, 50)
	jar.add_child(jam)
	
	# –≠–º–æ–¥–∑–∏ –¥–ª—è –∫—Ä–∞—Å–æ—Ç—ã
	var label = Label.new()
	label.text = "üçØ"
	label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	label.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
	label.size = Vector2(80, 120)
	label.add_theme_font_size_override("font_size", 40)
	jar.add_child(label)
	
	return jar

func _on_jar_gui_input(event: InputEvent, jar: Control):
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –∫–ª–∏–∫–∞ –¥–ª—è –±–∞–Ω–æ–∫"""
	if not jar or not is_instance_valid(jar):
		return
		
	if event is InputEventMouseButton:
		if event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
			# –ü—Ä–æ–≤–µ—Ä–∏—Ç—å, —á—Ç–æ –∫–ª–∏–∫ –≤–Ω—É—Ç—Ä–∏ –±–∞–Ω–∫–∏
			var local_pos = jar.get_local_mouse_position()
			var jar_rect = Rect2(Vector2.ZERO, jar.size)
			if jar_rect.has_point(local_pos):
				_on_jar_clicked(jar)
				# –û—Å—Ç–∞–Ω–æ–≤–∏—Ç—å —Ä–∞—Å–ø—Ä–æ—Å—Ç—Ä–∞–Ω–µ–Ω–∏–µ —Å–æ–±—ã—Ç–∏—è
				get_viewport().set_input_as_handled()

func _on_jar_clicked(jar: Control = null):
	"""–ò–≥—Ä–æ–∫ –∫–ª–∏–∫–Ω—É–ª –Ω–∞ –±–∞–Ω–∫—É"""
	if not jar or not is_instance_valid(jar):
		return
		
	if not game_logic or game_logic.current_state != FactoryJamGame.GameState.PLAYING:
		return
	
	# –ü—Ä–æ–≤–µ—Ä–∏—Ç—å, –Ω–µ –ø–æ–º–µ—á–µ–Ω–∞ –ª–∏ —É–∂–µ –±–∞–Ω–∫–∞
	if jar.has_method("is_labeled") and jar.is_labeled():
		return
	
	# –ü–æ–º–µ—Ç–∏—Ç—å –±–∞–Ω–∫—É –≤ –ª–æ–≥–∏–∫–µ –∏–≥—Ä—ã
	game_logic.label_jar()
	
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–µ—Å—Ç–∏ –∑–≤—É–∫ –Ω–∞–∫–ª–µ–∏–≤–∞–Ω–∏—è
	_play_sticker_sound()
	
	# –î–æ–±–∞–≤–∏—Ç—å –≤–∏–∑—É–∞–ª—å–Ω—É—é –Ω–∞–∫–ª–µ–π–∫—É —Å –∞–Ω–∏–º–∞—Ü–∏–µ–π
	if jar.has_method("add_sticker"):
		jar.add_sticker("OK")
	elif jar.has_method("label_jar"):
		jar.label_jar()
	else:
		# –°–æ–∑–¥–∞—Ç—å –Ω–∞–∫–ª–µ–π–∫—É –≤–∏–∑—É–∞–ª—å–Ω–æ
		_add_sticker_to_jar(jar)
	
	# –ê–Ω–∏–º–∞—Ü–∏—è —É—Å–ø–µ—Ö–∞ –±–∞–Ω–∫–∏
	var tween = create_tween()
	tween.set_parallel(true)
	tween.tween_property(jar, "scale", Vector2(1.2, 1.2), 0.1)
	tween.tween_property(jar, "scale", Vector2(1.0, 1.0), 0.1).set_delay(0.1)
	
	# –≠—Ñ—Ñ–µ–∫—Ç —á–∞—Å—Ç–∏—Ü (–≤–∏–∑—É–∞–ª—å–Ω—ã–π)
	_create_click_effect(jar)

func _play_sticker_sound():
	"""–í–æ—Å–ø—Ä–æ–∏–∑–≤–µ—Å—Ç–∏ –∑–≤—É–∫ –Ω–∞–∫–ª–µ–∏–≤–∞–Ω–∏—è –Ω–∞–∫–ª–µ–π–∫–∏"""
	if sticker_sound:
		if sticker_sound.stream:
			sticker_sound.play()
		else:
			# –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º –ø—Ä–æ—Å—Ç–æ–π –∑–≤—É–∫ –ø—Ä–æ–≥—Ä–∞–º–º–Ω–æ (–æ–ø—Ü–∏–æ–Ω–∞–ª—å–Ω–æ)
			pass

func remove_jar(jar: Control):
	"""–£–¥–∞–ª–∏—Ç—å –±–∞–Ω–∫—É"""
	if jar in jars:
		jars.erase(jar)
	if is_instance_valid(jar):
		jar.queue_free()

func _on_jar_labeled(combo: int, current_score: int):
	"""–ë–∞–Ω–∫–∞ –ø–æ–º–µ—á–µ–Ω–∞"""
	# –≠—Ñ—Ñ–µ–∫—Ç —É—Å–ø–µ—Ö–∞ - –Ω–∞–π—Ç–∏ –ø–æ—Å–ª–µ–¥–Ω—é—é –±–∞–Ω–∫—É –∏ –¥–æ–±–∞–≤–∏—Ç—å —ç—Ñ—Ñ–µ–∫—Ç
	if jars.size() > 0:
		var last_jar = jars[jars.size() - 1]
		if last_jar and is_instance_valid(last_jar):
			# –ê–Ω–∏–º–∞—Ü–∏—è —É—Å–ø–µ—Ö–∞
			var tween = create_tween()
			tween.set_parallel(true)
			tween.tween_property(last_jar, "scale", Vector2(1.2, 1.2), 0.1)
			tween.tween_property(last_jar, "scale", Vector2(1.0, 1.0), 0.1).set_delay(0.1)
			
			# –ß–∞—Å—Ç–∏—Ü—ã
			_create_label_particles(last_jar.position + Vector2(last_jar.size.x/2, last_jar.size.y/2))
			
			# –¢–µ–∫—Å—Ç –∫–æ–º–±–æ (–µ—Å–ª–∏ –∫–æ–º–±–æ > 1)
			if combo > 1:
				_show_floating_text(last_jar.position, "Combo x%d!" % combo, Color(1, 0.8, 0.2))
			else:
				_show_floating_text(last_jar.position, "+10", Color(0.2, 1, 0.2))

func _on_jar_missed():
	"""–ë–∞–Ω–∫–∞ –ø—Ä–æ–ø—É—â–µ–Ω–∞"""
	# –≠—Ñ—Ñ–µ–∫—Ç –ø—Ä–æ–≤–∞–ª–∞ - –∑–∞—Ç–µ–º–Ω–µ–Ω–∏–µ —ç–∫—Ä–∞–Ω–∞ –∏–ª–∏ –∫—Ä–∞—Å–Ω–∞—è –≤—Å–ø—ã—à–∫–∞
	var flash = ColorRect.new()
	flash.color = Color(1, 0, 0, 0.3)
	flash.anchors_preset = Control.PRESET_FULL_RECT
	flash.mouse_filter = Control.MOUSE_FILTER_IGNORE
	add_child(flash)
	
	var tween = create_tween()
	tween.tween_property(flash, "modulate:a", 0.0, 0.3)
	tween.tween_callback(flash.queue_free)
	
	_show_floating_text(Vector2(get_viewport_rect().size.x - 100, get_viewport_rect().size.y/2), "Miss!", Color(1, 0.2, 0.2))

func _create_label_particles(pos: Vector2):
	"""–°–æ–∑–¥–∞—Ç—å —ç—Ñ—Ñ–µ–∫—Ç —á–∞—Å—Ç–∏—Ü"""
	var particles = CPUParticles2D.new()
	particles.position = pos
	particles.amount = 10
	particles.lifetime = 0.5
	particles.one_shot = true
	particles.explosiveness = 1.0
	particles.spread = 180.0
	particles.gravity = Vector2(0, 500)
	particles.initial_velocity_min = 100.0
	particles.initial_velocity_max = 200.0
	particles.scale_amount_min = 2.0
	particles.scale_amount_max = 4.0
	particles.color = Color(1, 1, 0.5)
	
	# –ö–æ–Ω—Ç–µ–π–Ω–µ—Ä –¥–ª—è —á–∞—Å—Ç–∏—Ü (–≤–∞–∂–Ω–æ —á—Ç–æ–±—ã –æ–Ω–∏ –±—ã–ª–∏ –ø–æ–≤–µ—Ä—Ö –±–∞–Ω–æ–∫)
	if conveyor:
		conveyor.add_child(particles)
	else:
		add_child(particles)
		
	# –£–¥–∞–ª–µ–Ω–∏–µ –ø–æ—Å–ª–µ –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è
	await get_tree().create_timer(1.0).timeout
	particles.queue_free()

func _show_floating_text(pos: Vector2, text: String, color: Color):
	"""–ü–æ–∫–∞–∑–∞—Ç—å –≤—Å–ø–ª—ã–≤–∞—é—â–∏–π —Ç–µ–∫—Å—Ç"""
	var label = Label.new()
	label.text = text
	label.modulate = color
	label.position = pos + Vector2(0, -20)
	label.add_theme_font_size_override("font_size", 24)
	label.add_theme_color_override("font_outline_color", Color.BLACK)
	label.add_theme_constant_override("outline_size", 4)
	
	if conveyor:
		conveyor.add_child(label)
	else:
		add_child(label)
	
	var tween = create_tween()
	tween.set_parallel(true)
	tween.tween_property(label, "position:y", pos.y - 80, 0.8).set_ease(Tween.EASE_OUT)
	tween.tween_property(label, "modulate:a", 0.0, 0.8).set_ease(Tween.EASE_IN)
	tween.tween_callback(label.queue_free).set_delay(0.8)

func _on_game_finished(score: int, jars_labeled: int, jars_missed: int):
	"""–ò–≥—Ä–∞ –∑–∞–∫–æ–Ω—á–µ–Ω–∞"""
	update_ui()
	
	# –ü–æ–∫–∞–∑–∞—Ç—å —Ä–µ–∑—É–ª—å—Ç–∞—Ç
	var result_text = "–ò–≥—Ä–∞ –æ–∫–æ–Ω—á–µ–Ω–∞!\n"
	result_text += "–ë–∞–Ω–æ–∫ –ø–æ–º–µ—á–µ–Ω–æ: %d\n" % jars_labeled
	result_text += "–ë–∞–Ω–æ–∫ –ø—Ä–æ–ø—É—â–µ–Ω–æ: %d\n" % jars_missed
	result_text += "–û—á–∫–∏: %d\n" % score
	
	if game_logic and game_logic.is_passed():
		result_text += "\n‚úÖ –ó–∞–¥–∞–Ω–∏–µ –≤—ã–ø–æ–ª–Ω–µ–Ω–æ!"
	elif game_logic:
		result_text += "\n‚ùå –ù—É–∂–Ω–æ –º–∏–Ω–∏–º—É–º %d –±–∞–Ω–æ–∫!" % game_logic.required_jars
	
	if timer_label:
		timer_label.text = result_text
	
	# –ü–µ—Ä–µ—Ö–æ–¥ –∫ —Å—é–∂–µ—Ç—É —á–µ—Ä–µ–∑ –∑–∞–¥–µ—Ä–∂–∫—É
	await get_tree().create_timer(3.0).timeout
	factory_game_finished.emit(score, jars_labeled, jars_missed)

func update_ui():
	"""–û–±–Ω–æ–≤–∏—Ç—å –∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å"""
	if not game_logic:
		return
		
	var progress = float(game_logic.jars_labeled) / float(game_logic.required_jars) * 100.0
	
	if score_label:
		score_label.text = "üìä –û—á–∫–∏: %d (–ö–æ–º–±–æ: x%d)" % [game_logic.score, game_logic.combo_count]
	
	if progress_label:
		progress_label.text = "‚úÖ –ü–æ–º–µ—á–µ–Ω–æ: %d/%d (%.0f%%)" % [game_logic.jars_labeled, game_logic.required_jars, progress]
		
		# –ó–µ–ª—ë–Ω—ã–π —Ü–≤–µ—Ç –ø—Ä–∏ —Ö–æ—Ä–æ—à–µ–º –ø—Ä–æ–≥—Ä–µ—Å—Å–µ
		if progress >= 100:
			progress_label.modulate = Color(0.3, 1, 0.3)  # –ó–µ–ª—ë–Ω—ã–π
		elif progress >= 70:
			progress_label.modulate = Color(1, 1, 0.3)  # –ñ—ë–ª—Ç—ã–π
		else:
			progress_label.modulate = Color(1, 1, 1)  # –ë–µ–ª—ã–π
